Sat Sep  2 12:00:32 2006  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/csv.rb (CSV::IOReader#initialize): use String#[](pos, len)
	  instead of String#[](idx) to check utf BOM.  follows String#[](idx)
	  behavior change of 1.9.

Fri Sep  1 22:07:04 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.h (RSTRING_EMBED_LEN_MASK): uses 5 bits to support 64bit
	  environment.  [ruby-dev:29369]

Fri Sep  1 22:02:08 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_resize): should copy embedded string to
	  malloc'ed buffer.  a patch from <nobu at ruby-lang.org> in
	  [ruby-dev:29369].  fixed: [ruby-dev:29368]

	* string.c (rb_str_ord): use %ld specifier since STRING_LEN() is a
	  long.  [ruby-dev:29369]

Fri Sep  1 21:41:12 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (socks_init): typo fixed.  a patch from Sven
	  Klemm <sven at c3d2.de>.  [ruby-core:08770]

Fri Sep  1 14:22:42 2006  WATANABE Hirofumi  <eban@ruby-lang.org>

	* array.c (rb_ary_shuffle): RDoc fixed.

Fri Sep  1 13:52:57 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/font.rb: TkFont#current_configinfo() doesn't work
	  on Tcl/Tk8.x.

Fri Sep  1 09:32:55 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex::getc): should not push nil into
	  reading buffer (@readed).  reported in
	  <http://jarp.does.notwork.org/diary/200608c.html#200608311>.

Thu Aug 31 23:59:03 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): follow nil.to_s.

Thu Aug 31 20:50:46 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): follow nil.to_s.

	* win32/resource.rb: ditto.

Thu Aug 31 20:21:47 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (search_required): use RSTRING_PTR and RSTRING_STR.

	* file.c (test_identical, rb_file_s_truncate): ditto.

	* io.c (pipe_open, rb_io_reopen): ditto.

	* object.c (nil_plus): ditto.

	* process.c (proc_spawn_n, rb_spawn): ditto.
